--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,7 @@
 body {
     font-family: sans-serif;
     font-size: 1.1em;
+    background-color: gray;
 }
 
 .buttons {
@@ -43,4 +44,5 @@ p:not(.intro) {
 }
 #container {
     text-align:center;
+    background-color: aqua;
 }
